syntax = "proto3";

package api;
//import "google/protobuf/timestamp.proto";

option go_package = "api;api";

message UserID {
  string UserID = 1;
}

message SessionID {
  string SessionID = 1;
}

message Credentials {
  string Login = 1;
  string Password = 2;
}

message Empty {
}

message SessionInfo {
  string SessionID = 1;
  string UserID = 2;
  string CandID = 3;
  string EmplID = 4;
}

service Auth {
  rpc Login(Credentials) returns (SessionInfo) {}
  rpc Check(SessionID) returns (SessionInfo) {}
  rpc Logout(SessionID) returns (Empty) {}
}
